fixed an input stream bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
-*.vcx.proj
+simple synchronous server side chat.vcxproj
+simple synchronous server side chat.vcxproj.filters
+simple synchronous server side chat.vcxproj.user
